--- a/templates/allocated_course.html
+++ b/templates/allocated_course.html
@@ -2,7 +2,8 @@
 <html>
 <head>
     <title>Allocated Courses</title>
-    <style>
+    <link rel="stylesheet" href="/static/style.css">
+    <!-- <style>
         table {
             border-collapse: collapse;
             width: 100%;
@@ -21,11 +22,11 @@
         tr:nth-child(even) {
             background-color: #f2f2f2;
         }
-    </style>
+    </style> -->
 </head>
 <body>
     <h1>Allocated Courses</h1>
-    <table>
+    <table class="styled-table">
         <thead>
             <tr>
                 <th>Batch</th>
