--- a/templates/add_new_course.html
+++ b/templates/add_new_course.html
@@ -26,10 +26,10 @@
         <input type="text" id="new_trainer_id" name="new_trainer_id" required><br>
 
         <input type="submit" value="Add Course">
-    </form> -->
+    </form>  -->
     <div class="container">
         <div class="text">
-            Add New Course
+          <h1>  Add New Course</h1>
         </div>
         <form method="POST">
            <div class="form-row">
@@ -70,6 +70,7 @@
               </div>
         </form>
         </div>
-    <a href="/dashboard">Go Back to Dashboard</a>
+        
+    <a href="/dashboard" style="position: absolute; right: 10px;bottom: 10px;"><input type="button" class="button-3" role="button"value="Go back"></a>
 </body>
 </html>
