--- a/templates/allocated_course.html
+++ b/templates/allocated_course.html
@@ -52,6 +52,6 @@
             {% endfor %}
         </tbody>
     </table>
-    <a href="/">Go Back</a>
+    <a href="/"  style="position: absolute; right: 10px;bottom: 10px;"><input type="button" value="Go back" class="button-3"></a>
 </body>
 </html>
