--- a/templates/allocate_course.html
+++ b/templates/allocate_course.html
@@ -2,46 +2,25 @@
 <html>
 <head>
     <title>Allocate Course</title>
-    <link rel="stylesheet" type="text/css" href="styles.css">
-    <style>
+    <link rel="stylesheet" type="text/css" href="static/style.css">
 
-        /* Add your CSS styles here */
-        .form-container {
-            width: 70%;
-            margin: 0 auto;
-        }
-        .form-group {
-            margin-bottom: 20px;
-        }
-        label {
-            display: block;
-            font-weight: bold;
-        }
-        input[type="text"], select {
-            width: 100%;
-            padding: 10px;
-        }
-        .home-button {
-            margin-top: 20px;
-        }
-    </style>
 </head>
 <body>
-    <h1>Allocate Course</h1>
+    <h1 style="position: absolute;left: 500px">Allocate Course</h1>
 
-    <div class="form-container">
+    <div style="position: absolute;right: 30px;" class="form-container">
         <form method="POST">
             <div class="form-group">
-                <label for="batch">Batch:</label>
+                
                 <select name="batch" id="batch" required>
                     <option value="">Select Batch</option>
                     {% for batch in batch_names %}
                     <option value="{{ batch }}">{{ batch }}</option>
                     {% endfor %}
                 </select>
-            </div>
+            </div><br><br><br>
             <div class="form-group">
-                <label for="course_type">Course Type:</label>
+             
                 <select name="course_type" id="course_type" required>
                     <option value="">Select Course Type</option>
                     {% for course_type in course_types %}
@@ -49,45 +28,49 @@
                     {% endfor %}
                 </select>
             </div>
-            
+            <br><br><br>
             <div class="form-group">
-                <label for="course_name">Course Name:</label>
+                
                 <select name="course_name" id="course_name" required>
                     <option value="">Select Course Name</option>
                     {% for record in master_data %}
                         <option value="{{ record['Course Name'] }}">{{ record['Course Name'] }}</option>
                     {% endfor %}
                 </select>
-            </div>
+            </div><br><br><br>
            <div class="form-group">
-    <label for="duration_start">Course Duration (Start Date):</label>
+    <label for="duration_start" style="font-weight: bold">Course Duration (Start Date):</label>
     <input type="date" name="duration_start" id="duration_start" required>
-</div>
+</div><br>
 <div class="form-group">
-    <label for="duration_end"> End Date:</label>
+    <label for="duration_end" style="font-weight: bold;">Course Duration (End Date):</label>
     <input type="date" name="duration_end" id="duration_end" required>
-</div>
-
+</div><br>
+            
             <div class="form-group">
-                <label for="online_offline">Online/Offline:</label>
+                
                 <select name="online_offline" id="online_offline" required>
                     <option value="Online">Online</option>
                     <option value="Offline">Offline</option>
                 </select>
-            </div>
+            </div><br><br><br>
             <div class="form-group">
-                <label for="trainer">Trainer:</label>
+                
                 <select name="trainer" id="trainer" required>
                     <option value="">Select Trainer</option>
                     {% for record in master_data %}
                         <option value="{{ record['Trainer'] }}">{{ record['Trainer'] }}</option>
                     {% endfor %}
                 </select>
-            </div>
+            </div><br><br><br><br><br>
             <div class="form-group">
-                <input type="submit" value="Allocate">
+                <input type="submit" class="button2" value="Allocate">
             </div>
         </form>
+        
+            </div>
+
+        
     </div>
     <script>
         // Function to update course names based on course type
