--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -1,15 +1,14 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Course Management System</title>
 </head>
 <body>
-    <a href="{{ url_for('allocated_courses') }}">View Allocated Courses</a>
-    <br>
+    <h1>Welcome to the Course Management System</h1>
 
+    <h2>Add New Course</h2>
+    <a href="/add_new_course_form">Add a new course</a>
 
-    <a href="/add_new_course" class="btn btn-primary">Add New Course</a>
+    <a href="/add_new_batch">Add a new batch</a>
 </body>
 </html>
