--- a/templates/add_new_course.html
+++ b/templates/add_new_course.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html>
 <head>
+    <link rel="stylesheet" href="/static/style.css">
     <title>Add New Course</title>
 </head>
 <body>
 
 
-    <h1>Add New Course</h1>
    
     {% with messages = get_flashed_messages() %}
     {% if messages %}
@@ -19,7 +19,7 @@
     {% endwith %}
 
 
-    <form method="POST" action="/add_new_course">
+    <!-- <form method="POST" action="/add_new_course">
         <label for="course_type">Course Type:</label>
         <input type="text" name="course_type" required><br>
 
@@ -36,9 +36,53 @@
         <input type="text" name="image_url" required><br>
 
         <input type="submit" value="Add Course">
-    </form>
+    </form> -->
+    <div class="container">
+        <div class="text">
+          <h1>Add new Course</h1>
+        </div>
+        <form method="POST" action="/add_new_course">
+           <div class="form-row">
+              <div class="input-data">
+                <input type="text" name="course_type" required><br>
+                 <div class="underline"></div>
+                 <label for="">Course Type</label>
+              </div>
+              <div class="input-data">
+                <input type="text" name="course_name" required><br>
+                 <div class="underline"></div>
+                 <label for="">Course Name:</label>
+              </div>
+           </div>
+           <div class="form-row">
+              <div class="input-data">
+                <input type="text" name="duration" required><br>
+                 <div class="underline"></div>
+                 <label for="">Duration:</label>
+              </div>
+              <div class="input-data">
+                <input type="text" name="online_offline" required><br>
+                 <div class="underline"></div>
+                 <label for="">Online/Offline:</label>
+              </div>
+              <div class="input-data">
+               <input type="text" name="image_url" required><br>
+                 <div class="underline"></div>
+                 <label for="">Image URL:</label>
+              </div>
+           </div>
+           <div class="form-row">
+           <div class="input-data textarea">
+              <br />
+              <div class="form-row submit-btn">
+                 <div class="input-data">
+                    <div class="inner"></div>
+                    <input type="submit"  value="submit" class="button-3">
+                 </div>
+              </div>
+        </form>
+        </div>
 
-
-    <a href="/">Back to Home</a>
+   
 </body>
 </html>
