--- a/templates/allocate_course.html
+++ b/templates/allocate_course.html
@@ -1,17 +1,18 @@
 <!DOCTYPE html>
 <html>
 <head>
+    <link rel="stylesheet" href="/static/style.css">
     <title>Allocate Courses</title>
 </head>
 <body>
-    <h1>Allocate Courses</h1>
     
-    <form method="POST" action="/allocate_course">
+    
+    <!-- <form method="POST" action="/allocate_course">
         <div class="form-group">
-            <label for="batch">Batch:</label>
+            
             <select name="batch" id="batch" required>
                 <option value="" disabled selected>Select Batch</option>
-                <!-- Populate batch options dynamically -->
+                
                 {% for batch in batches %}
                 <option value="{{ batch }}">{{ batch }}</option>
                 {% endfor %}
@@ -32,7 +33,7 @@
             <label for="course_name">Course Name:</label>
             <select name="course_name" id="course_name" required>
                 <option value="" disabled selected>Select Course Name</option>
-                <!-- Populate course name options dynamically -->
+                
                 {% for course in courses %}
                 <option value="{{ course }}">{{ course }}</option>
                 {% endfor %}
@@ -53,7 +54,7 @@
             <label for="trainer">Trainer:</label>
             <select name="trainer" id="trainer" required>
                 <option value="" disabled selected>Select Trainer</option>
-                <!-- Populate trainer options dynamically -->
+           
                 {% for trainer in trainers %}
                 <option value="{{ trainer }}">{{ trainer }}</option>
                 {% endfor %}
@@ -61,7 +62,82 @@
         </div>
         
         <input type="submit" value="Allocate">
-    </form>
-    <a href="/">Back to Home</a>
+    </form> -->
+
+
+
+
+    <div class="container">
+        <div class="text">
+            <h1>Allocate Courses</h1>
+        </div>
+        <form  method="POST" action="/allocate_course">
+           <div class="form-row">
+              <div class="input-data">
+               
+                <select name="batch" id="batch" required>
+                    <option value="" disabled selected>Select Batch</option>
+                    <!-- Populate batch options dynamically -->
+                    {% for batch in batches %}
+                    <option value="{{ batch }}">{{ batch }}</option>
+                    {% endfor %}
+                </select>
+              </div>
+              <div class="input-data">
+                <select name="course_type" id="course_type" required>
+                    <option value="" disabled selected>Select Course Type</option>
+                    <option value="Foundation">Foundation</option>
+                    <option value="Induction">Induction</option>
+                    <option value="Advanced">Advanced</option>
+                </select>
+              </div>
+           </div>
+           <div class="form-row">
+              <div class="input-data">
+                <select name="course_name" id="course_name" required>
+                    <option value="" disabled selected>Select Course Name</option>
+                    <!-- Populate course name options dynamically -->
+                    {% for course in courses %}
+                    <option value="{{ course }}">{{ course }}</option>
+                    {% endfor %}
+                </select>
+              </div>
+              
+           </div>
+           <div class="form-row">
+           <div class="input-data">
+            
+                <label for="start_date">Start Date:</label><br>
+                <input type="date" name="start_date" id="start_date" required><br>
+              </div>
+              <div class="input-data">
+
+           <label for="end_date">End Date:</label><br>
+            <input type="date" name="end_date" id="end_date" required>
+        </div>
+    </div>
+    <div class="form-row">
+    <div class="input-data"><br>
+       
+        <select name="trainer" id="trainer" required>
+            <option value="" disabled selected>Select Trainer</option>
+            <!-- Populate trainer options dynamically -->
+            {% for trainer in trainers %}
+            <option value="{{ trainer }}">{{ trainer }}</option>
+            {% endfor %}
+        </select>
+      </div>
+    </div>
+
+           <div class="form-row">
+              <div class="form-row submit-btn">
+                 <div class="input-data">
+                    <div class="inner"></div>
+                    <input type="submit" class="button-3" value="submit">
+                 </div>
+              </div>
+        </form>
+        </div>
+    
 </body>
 </html>
